Breaks when workingCopyPath contains spaces. Patch by Juergen Hoffmann.
git-svn-id: https://cruisecontrol.svn.sourceforge.net/svnroot/cruisecontrol/trunk/cruisecontrol@3975 878de816-9c12-0410-b5fe-b34e1928e20d